# supershuckie2

./: .gitignore  CMakeLists.txt  Cargo.toml  corrosion.cmake
bootrom/cgb/: Makefile  defaultrom.asm  defaultrom.hpp  to_header.py
bootrom/cgb/cgb_boot/: cgb_boot_fast.hpp
bootrom/dmg/: dmg.asm
supershuckie/: Cargo.toml
supershuckie-core/: Cargo.toml
supershuckie-core-c/: Cargo.toml
supershuckie-core-c/include/supershuckie/: supershuckie.h  supershuckie.hpp
supershuckie-core-c/src/: core.rs
supershuckie-core/src/: emulator.rs  lib.rs  thread.rs
supershuckie-core/src/emulator/: game_boy_color.rs  null.rs
supershuckie-frontend/: Cargo.toml
supershuckie-frontend-c/: Cargo.toml
supershuckie-frontend-c/include/supershuckie/: control_settings.h  frontend.h  string_array.h  supershuckie.h
supershuckie-frontend-c/src/: control_settings.rs  frontend.rs  lib.rs  string_array.rs
supershuckie-frontend/src/: lib.rs  settings.rs  util.rs
supershuckie-pokeabyte-integration/: Cargo.toml  build.rs
supershuckie-pokeabyte-integration/src/: lib.rs  main.rs  protocol.rs  shared_memory.rs
supershuckie-pokeabyte-integration/src/shared_memory/: linux.c  macos.c  windows.c
supershuckie-qt/: CMakeLists.txt  Info.plist.in  icon-credits.txt  supershuckie.icns
supershuckie-qt/src/: ask_for_text_dialog.cpp  ask_for_text_dialog.hpp  controller_settings_window.cpp  controller_settings_window.hpp  error.hpp  file_rw.cpp  file_rw.hpp  game_speed_dialog.cpp  game_speed_dialog.hpp  main.cpp  main_window.cpp  main_window.hpp  render_widget.cpp  render_widget.hpp  replay_playback_controls.cpp  replay_playback_controls.hpp  sdl_event_wrapper.cpp  sdl_event_wrapper.hpp  select_item_dialog.cpp  select_item_dialog.hpp  theme.cpp  theme.hpp  windows.rc
supershuckie-replay-recorder/: Cargo.toml
supershuckie-replay-recorder/src/: lib.rs  packet.rs  replay_file.rs  util.rs
supershuckie-replay-recorder/src/packet/: io.rs
supershuckie-replay-recorder/src/replay_file/: header.rs  playback.rs  record.rs
supershuckie-replay-recorder/src/replay_file/record/: thread.rs
supershuckie/src/: error.rs  main.rs  renderer.rs
