[package]
name = "supershuckie-core-c"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
supershuckie-core = { workspace = true }
supershuckie-replay-recorder = { workspace = true }
supershuckie-pokeabyte-integration = { workspace = true }
