[package]
name = "supershuckie-replay-recorder"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = ["std"]
std = []

[dependencies]
num_enum = { workspace = true }
tinyvec = { workspace = true }
spin = { workspace = true }
zstd-sys = { workspace = true }
blake3 = { workspace = true }
